# dpl-pypi

./: .gitmodules  README.txt  pyproject.toml  run.sh
.github/: workflow.yaml
